--- a/bookstore/templates/base.html
+++ b/bookstore/templates/base.html
@@ -39,9 +39,9 @@
                     <span>|</span>
                     <a href="{% url 'user:user' %}">用户中心</a>
                     <span>|</span>
-                    <a href="#">我的购物车</a>
+                    <a href="{% url 'cart:show' %}">我的购物车</a>
                     <span>|</span>
-                    <a href="#">我的订单</a>
+                    <a href="{% url 'user:order' %}">我的订单</a>
                 </div>
             </div>
         </div>
@@ -52,8 +52,10 @@
     <div class="search_bar clearfix">
         <a href="{% url 'index' %}" class="logo fl"><img src="{% static 'images/logo.png' %}" style="width: 160px; height: 53px;"></a>
         <div class="search_con fl">
-            <input type="text" class="input_text fl" name="" placeholder="搜索商品">
-            <input type="button" class="input_btn fr" name="" value="搜索">
+            <form action="/search/" target="_blank" method="get">
+                <input type="text" class="input_text fl" name="q" placeholder="搜索商品">
+                <input type="submit" class="input_btn fr" name="" value="搜索">
+            </form>
         </div>
         <div class="guest_cart fr">
             <a href="{% url 'cart:show' %}" class="cart_name fl">我的购物车</a>
