--- a/bookstore/templates/books/detail.html
+++ b/bookstore/templates/books/detail.html
@@ -5,6 +5,22 @@
 {% endblock %}
 
 {% block topfiles %}
+     <style type="text/css">
+        .comment {
+            background-color: #c40000;
+            color: #fff;
+            margin-left: 10px;
+            position: relative;
+            z-index: 10;
+            display: inline-block;
+            width: 178px;
+            height: 38px;
+            border: 1px solid #c40000;
+            font-size: 14px;
+            line-height: 38px;
+            text-align: center;
+        }
+    </style>
     <script>
         $(function () {
             update_total_price()
@@ -103,6 +119,17 @@
                 {% csrf_token %}
 				<a href="javascript:;" class="buy_btn">立即购买</a>
 				<a href="javascript:;" books_id="{{ books.id }}" class="add_cart" id="add_cart">加入购物车</a>
+                <a href="##" id="write_comment" class="comment">我要写评论</a>
+                <div style="display:none;" id="comment-input" data-bookid="{{ books.id }}" data-userid="{{ request.session.user_id }}">
+                <div>
+                    <input id="comment_content" type="text" placeholder="评论内容">
+                </div>
+                <div id="submit-comment">
+                    <button>
+                      提交评论
+                    </button>
+                </div>
+            </div>
 			</div>
 		</div>
 	</div>
@@ -125,20 +152,24 @@
 
 		<div class="r_wrap fr clearfix">
 			<ul class="detail_tab clearfix">
-				<li class="active">商品介绍</li>
-				<li>评论</li>
+				<li class="active" id="detail">商品介绍</li>
+				<li id="comment">评论</li>
 			</ul>
 
-			<div class="tab_content">
-				<dl>
+			<div class="tab_content" >
+				<dl id="book_detail">
 					<dt>商品详情：</dt>
 					<dd>{{ books.detail|safe }} </dd>
 				</dl>
+                <dl id="book_comment" style="display: none; font-size: 15px; color: #0a0a0a">
+                <dt>用户评论:</dt>
+                <dd></dd>
+            </dl>
 			</div>
-
 		</div>
 	</div>
     <script type="text/javascript">
+        load_comments();
         $('#add_cart').click(function () {
             var books_id = $(this).attr('books_id');
             var books_count = $('.num_show').val();
@@ -158,7 +189,55 @@
                     alert(data.errmsg)
                 }
             })
-        })
+        });
+        $('#detail').click(function () {
+            $(this).addClass('active');
+            $('#comment').removeClass('active');
+            $('#book_comment').hide();
+            $('#book_detail').show()
+        });
+         $('#comment').click(function () {
+            $(this).addClass('active');
+            $('#detail').removeClass('active');
+            $('#book_comment').show();
+            $('#book_detail').hide();
+        });
+         $('#write_comment').click(function () {
+             $('#comment-input').show()
+         });
+         $('#submit-comment').click(function () {
+             var user_id = $('#comment-input').attr('data-userid');
+             var books_id = $('#comment-input').attr('data-bookid');
+             var content = $('#comment_content').val();
+             var csrf = $('input[name="csrfmiddlewaretoken"]').val();
+             params ={
+                 'user_id':user_id,
+                 'books_id':books_id,
+                 'content':content,
+                 'csrfmiddlewaretoken':csrf
+             }
+             $.post('/comment/comment/',params,function (data) {
+                 if(data.res == 2){
+                     alert('评论成功');
+                     var temp = '<div>'+'<span>'+ '{{ request.session.username }}'+ ':' +'</span>'+'<span>'+ content+ '.' +'</span>'+'</div>';
+                     $('#book_comment').append(temp);
+                     $('#comment_content').val('')
+                 }else{
+                     alert(data.errmsg);
+                 }
+             })
+         })
+        function load_comments() {
+            var books_id = $('#add_cart').attr('books_id');
+            $.get('/comment/comment/',{'books_id':books_id},function (data) {
+                dom_teamp = ''
+                for (i=0;i<data.data.length;i++){
+                    var temp = '<div>'+'<span>'+ data.data[i].username+ ':' +'</span>'+'<span>'+ data.data[i].content+ '.' +'</span>'+'</div>'
+                    dom_teamp +=temp
+                }
+                $('#book_comment').append(dom_teamp)
+            });
+        }
     </script>
 {% endblock %}
 
