--- a/bookstore/templates/users/login.html
+++ b/bookstore/templates/users/login.html
@@ -4,36 +4,37 @@
 尚硅谷书城-登录
 {% endblock %}
 {% block topfiles %}
+{% block search_bar %}{% endblock search_bar %}
 <script>
     $(function () {
         $('#btnLogin').click(function () {
             var username = $("#username").val()
             var password = $("#pwd").val()
             var remember = $('input[name="remember"]').prop('checked')
+            var vc = $('input[name="vc"]').val()
             var csrfmiddlewaretoken = $('input[name="csrfmiddlewaretoken"]').val()
 
             var params = {
-                username:username,
-                password:password,
-                remember:remember,
-                csrfmiddlewaretoken:csrfmiddlewaretoken
+                'username':username,
+                'password':password,
+                'remember':remember,
+                'csrfmiddlewaretoken':csrfmiddlewaretoken,
+                'verifycode':vc
             }
             $.post("{% url 'user:login' %}",params,function (data) {
                 if(data.res == 1){
                     location.href = data.next_url;
-                }else if(data.res == 2){
-                    alert("数据不完整");
-                }else if(data.res == 0){
-                    alert("用户名或密码错误");
+                }else{
+                    alert(data.errmsg);
                 }
             })
-        })
+        });
     })
 </script>
 {% endblock %}
 {% block body %}
 <div class="login_top clearfix">
-		<a href="index.html" class="login_logo"><img src="images/logo.png" style="width: 160px; height: 53px;"></a>
+		<a href="index.html" class="login_logo"><img src="{% static 'images/logo.png' %}" style="width: 160px; height: 53px;"></a>
 	</div>
 
 	<div class="login_form_bg">
@@ -48,15 +49,19 @@
 				<div class="form_input">
 					<form>
                         {% csrf_token %}
-						<input type="text" id="username" class="name_input" placeholder="请输入用户名">
-{#						<div class="user_error">输入错误</div>#}
+						<input type="text" id="username" class="name_input" value="{{ username }}" placeholder="请输入用户名">
+						<div class="user_error">输入错误</div>
 						<input type="password" id="pwd" class="pass_input" placeholder="请输入密码">
-{#						<div class="pwd_error">输入错误</div>#}
+						<div class="pwd_error">输入错误</div>
 						<div class="more_input clearfix">
-							<input type="checkbox" name="remember" checked>
+							<input type="checkbox" name="remember" {{ checked }}>
 							<label>记住用户名</label>
 							<a href="#">忘记密码</a>
 						</div>
+                        <div style="top: 100px;position: absolute">
+                            <input type="text" id="vc" name="vc">
+                            <img src="/user/verifycode/" onclick="this.src='/user/verifycode/?'+Math.random()" alt="CheckCode">
+                        </div>
 						<input type="button" id="btnLogin" name="" value="登录" class="input_submit">
 					</form>
 				</div>
