--- a/bookstore/templates/users/register.html
+++ b/bookstore/templates/users/register.html
@@ -4,10 +4,11 @@
 {% block title %}
 尚硅谷书城-注册
 {% endblock %}
+{% block search_bar %}{% endblock search_bar %}
 {% block body %}
     <div class="register_con">
 		<div class="l_con fl">
-			<a class="reg_logo"><img src="images/logo.png" style="width: 160px; height: 53px;"></a>
+			<a class="reg_logo"><img src="{% static 'images/logo.png' %}" style="width: 160px; height: 53px;"></a>
 			<div class="reg_slogan">学计算机  ·  来尚硅谷</div>
 			<div class="reg_banner"></div>
 		</div>
