--- a/bookstore/templates/users/user_center_order.html
+++ b/bookstore/templates/users/user_center_order.html
@@ -1,5 +1,6 @@
 {% extends 'base.html' %}
 {% load staticfiles %}
+{% load filters %}
 {% block title %}
 尚硅谷书城-用户中心
 {% endblock %}
@@ -52,7 +53,7 @@
                         <ul class="order_list_th w978 clearfix">
                             <li class="col01">{{ order.create_time }}</li>
                             <li class="col02">订单号：{{ order.order_id}}</li>
-                            <li class="col02 stress">{{ order.get_status_display  }}({{ order.status}})</li>
+                            <li class="col02 stress">{{ order.status|order_status}}</li>
                         </ul>
 
                         <table class="order_list_table w980">
@@ -69,7 +70,7 @@
                                         {% endfor %}
                                     </td>
                                     <td width="15%">{{ order.amount }}元</td>
-                                    <td width="15%">{{ order.get_status_display  }}({{ order.status}})</td>
+                                    <td width="15%">{{ order.status|order_status}}</td>
                                     <td width="15%"><a href="#"  order_id="{{ order.order_id }}" order_status="{{ order.status }}" class="oper_btn">去付款</a></td>
                                 </tr>
                             </tbody>
